--- a/Content.Client/_Impstation/Cosmiccult/UI/CosmicDeconvertedMenu.xaml
+++ b/Content.Client/_Impstation/Cosmiccult/UI/CosmicDeconvertedMenu.xaml
@@ -1,10 +1,10 @@
 <controls:FancyWindow xmlns="https://spacestation14.io"
                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-                      Title="{Loc 'rev-deconverted-title'}">
+                      Title="{Loc 'cosmiccult-ui-deconverted-title'}">
     <BoxContainer Orientation="Vertical" Margin="5">
-        <Label Text="{Loc 'rev-deconverted-text'}"/>
+        <Label Text="{Loc 'cosmiccult-ui-deconverted-text'}"/>
         <BoxContainer Orientation="Horizontal" Align="Center">
-            <Button Name="ConfirmButton" Text="{Loc 'rev-deconverted-confirm'}"/>
+            <Button Name="ConfirmButton" Text="{Loc 'cosmiccult-ui-deconverted-confirm'}"/>
         </BoxContainer>
     </BoxContainer>
 </controls:FancyWindow>
