--- a/Content.Client/_Impstation/Cosmiccult/UI/CosmicMonumentWindow.xaml
+++ b/Content.Client/_Impstation/Cosmiccult/UI/CosmicMonumentWindow.xaml
@@ -1,51 +1,109 @@
 <controls:FancyWindow xmlns="https://spacestation14.io"
-                xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-                Resizable="False"
-                SetSize="750 1120"
-                MinSize="750 1120">
-                    <TextureRect Stretch="KeepAspectCentered"
-                                TexturePath="/Textures/_Impstation/CosmicCult/Interface/glare.png"
-                                SetSize="1124 1124"
-                                Margin="0 0 0 0"/>
-    <BoxContainer Margin="0 0"
-                  Orientation="Vertical"
+                      xmlns:gfx="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
+                      xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
+                      xmlns:customControls="clr-namespace:Content.Client.Administration.UI.CustomControls"
+                      Title="{Loc 'cosmic-monument-ui-title'}"
+                      MinSize="450 650"
+                      SetSize="600 750">
+    <BoxContainer Orientation="Vertical"
                   HorizontalExpand="True"
                   VerticalExpand="True">
-        <BoxContainer Margin="15 15 7 0" Orientation="Horizontal">
-            <BoxContainer Orientation="Vertical" HorizontalExpand="True">
-                <BoxContainer Orientation="Horizontal"
-                              HorizontalExpand="True"
-                              VerticalExpand="True"
-                              Margin="0 0 0 0"
-                              VerticalAlignment="Center">
-                    <ProgressBar Name="FuelBar"
+        <BoxContainer Orientation="Horizontal"
+                      HorizontalExpand="True"
+                      VerticalExpand="False"
+                      MinHeight="25"
+                      Margin="10">
+
+            <BoxContainer Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True">
+
+                    <ProgressBar Name="EntropyBar"
                                  HorizontalExpand="True"
-                                 MaxValue="1"
-                                 MinValue="0"
-                                 SetHeight="25"
-                                 Margin="10 0 10 0"
+                                 MaxValue="100"
+                                 MinValue="5"
+                                 SetHeight="30"
+                                 Margin="5"
                                  VerticalAlignment="Center">
-                        <Label Name="FuelText"
-                               Margin="5 0"
-                               HorizontalAlignment="Center"
-                               Text="0 %" />
+                        <Label Name="EntropyText"
+                               Margin="4 0"
+                               Text="0%" HorizontalAlignment="Center"/>
                     </ProgressBar>
-                </BoxContainer>
-                <RichTextLabel Name="CooldownLabel" StyleClasses="StatusFieldTitle" />
-                <RichTextLabel Name="ReadyLabel" StyleClasses="StatusFieldTitle" />
+
+                <RichTextLabel Text="{Loc 'research-console-menu-server-selection-button'}"/>
+                <Control VerticalExpand="True"/>
+                <BoxContainer Name="TierDisplayContainer" Orientation="Horizontal" HorizontalExpand="True" VerticalAlignment="Bottom"/>
+                <!-- Welp. -->
             </BoxContainer>
-            <!--Sprite View-->
-            <PanelContainer Margin="12 0 0 0"
-                            StyleClasses="Inset"
-                            VerticalAlignment="Center">
-            </PanelContainer>
+
         </BoxContainer>
-        <BoxContainer VerticalExpand="True"
-                      HorizontalAlignment="Center"
-                      VerticalAlignment="Center"
-                      Margin="0 10">
-            <Button Name="GenerateButton"
-                    Text="{Loc 'cosmic-monument-generate'}"></Button>
+        <BoxContainer Orientation="Horizontal"
+                      HorizontalExpand="True"
+                      VerticalExpand="True">
+            <BoxContainer Orientation="Vertical"
+                          VerticalExpand="True"
+                          HorizontalExpand="True"
+                          SizeFlagsStretchRatio="2"
+                          Margin="10 0 10 10"
+                          MinWidth="175">
+                <Label Text="{Loc 'research-console-available-text'}" HorizontalAlignment="Center"/>
+                <customControls:HSeparator StyleClasses="LowDivider" Margin="0 0 0 10"/>
+                <PanelContainer VerticalExpand="True">
+                    <PanelContainer.PanelOverride>
+                        <gfx:StyleBoxFlat BackgroundColor="#1B1B1E" />
+                    </PanelContainer.PanelOverride>
+                    <ScrollContainer
+                        HScrollEnabled="False"
+                        HorizontalExpand="True"
+                        VerticalExpand="True">
+                        <BoxContainer
+                            Name="AvailableCardsContainer"
+                            Orientation="Vertical"
+                            VerticalExpand="True">
+                        </BoxContainer>
+                    </ScrollContainer>
+                </PanelContainer>
+                <Control MinHeight="10"/>
+                <Label Text="{Loc 'research-console-unlocked-text'}" HorizontalAlignment="Center"/>
+                <customControls:HSeparator StyleClasses="LowDivider" Margin="0 0 0 10"/>
+                <PanelContainer VerticalExpand="True">
+                    <PanelContainer.PanelOverride>
+                        <gfx:StyleBoxFlat BackgroundColor="#1B1B1E" />
+                    </PanelContainer.PanelOverride>
+                    <ScrollContainer
+                        HScrollEnabled="False"
+                        HorizontalExpand="True"
+                        VerticalExpand="True">
+                        <BoxContainer
+                            Name="UnlockedCardsContainer"
+                            Orientation="Vertical"
+                            VerticalExpand="True">
+                        </BoxContainer>
+                    </ScrollContainer>
+                </PanelContainer>
+            </BoxContainer>
+            <BoxContainer Orientation="Vertical"
+                          VerticalExpand="True"
+                          HorizontalExpand="True"
+                          SizeFlagsStretchRatio="3"
+                          Margin="0 0 10 10">
+                <PanelContainer VerticalExpand="True" MinSize="0 200">
+                    <PanelContainer.PanelOverride>
+                        <gfx:StyleBoxFlat BackgroundColor="#1B1B1E" />
+                    </PanelContainer.PanelOverride>
+                    <ScrollContainer
+                        HScrollEnabled="False"
+                        HorizontalExpand="True"
+                        SizeFlagsStretchRatio="2"
+                        VerticalExpand="True">
+                        <BoxContainer
+                            Name="InfluenceContainer"
+                            MinSize="100 256"
+                            Orientation="Vertical"
+                            SizeFlagsStretchRatio="2"
+                            VerticalExpand="True">
+                        </BoxContainer>
+                    </ScrollContainer>
+                </PanelContainer>
+            </BoxContainer>
         </BoxContainer>
     </BoxContainer>
 </controls:FancyWindow>
